tests/invalid/seq_compare_type_mismatch/main.py
x: str = "hello"
y: bytes = b"world"
z: bool = x == y
